--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -9,14 +9,14 @@
 @media screen and (min-width:768px) and (max-width:1023px) {
     .intro__title {
 		margin-top: 88px;
-		width: calc(100% -2*24px);
+		width: calc(100% - 2*24px);
     }
 } 
 
 @media screen and (min-width:320px) and (max-width:767px) {
     .intro__title {
 		margin-top: 64px;
-		width: calc(100% -2*16px);
+		width: calc(100% - 2*16px);
 		font-size: 32px;
 		line-height: 35px;
     }
