--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,7 +1,7 @@
 .place__url-heading {
 	font-size: 12px;
 	line-height: 20.4px;
-	latter-spacing: 2px;
+	letter-spacing: 2px;
 	color: #AAAAAA;
 	margin: 0;
 }
