--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,10 +1,11 @@
 .cover__subtitle {
 	margin: 32px auto 0;
-	width: 360px;
+	max-width: 360px;
+	width: 100%;
 	font-size: 18px;
 	line-height: 22px;
 	text-align: center;
-	color: #FFFFFF;
+	z-index: 1;
 }
 
 @media screen and (min-width:320px) and (max-width:767px) {
@@ -12,5 +13,6 @@
 		font-size: 14px;
 		line-height: 16px;
 		margin-top: 16px;
+		max-width: 288px;
 	}
 }
