--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,17 +1,33 @@
 .cover__title {
-	width: 560px;
+	max-width: 560px;
+	width: 100%;
 	font-weight: 900;
 	font-size: 72px;
 	line-height: 76px;
 	text-align: center;
 	color: #FFFFFF;
 	margin: 0 auto;
+	z-index: 1;
+	margin-top: 245px;
+}
+
+@media screen and (min-width:1024px) and (max-width:1279px) {
+	.cover__title {
+		margin-top: 195px;
+	}
+}
+
+@media screen and (min-width:768px) and (max-width:1023px) {
+	.cover__title {
+		margin-top: 115px;
+	}
 }
 
 @media screen and (min-width:320px) and (max-width:767px) {
 	.cover__title {
+		margin-top: 33px;
 		font-size: 32px;
 		line-height: 35px;
-		width: 288px;
+		max-width: 288px;
 	}
 }
