--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -2,7 +2,14 @@
 	margin: 92px auto 0;
 	display: block;
 	width: 100%;
+
 	position: relative;
+	min-height: 200px;
+}
+@media screen and (min-width:1280px) {
+	.cover {
+		max-width: calc(100% - 2*48px);
+	}	
 }
 
 @media screen and (min-width:320px) and (max-width:767px) {
@@ -11,18 +18,3 @@
 	}
 }
 
-.cover::before {
-	content: '';
-	position: absolute;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	background-color: #2A2C2F;
-	opacity: 0.3;
-	transition: opacity 0.5s linear;
-}
-
-.cover:hover::before {
-	opacity: 0.8;
-}
