--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -3,4 +3,12 @@
 	padding: 0;
 	font-size: 12px;
 	line-height: 18px;
+	margin: 0;
+	margin-top: 33px;
+}
+
+@media screen and (min-width:320px) and (max-width:767px) {
+	.intro__list {
+		margin-top: 34px;
+	}
 }
