--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,5 +1,5 @@
 .intro {
-	width: 690px;
+	max-width: 690px;
 	margin-left: 148px;
 }
 @media screen and (min-width:1024px) and (max-width:1279px) {
