--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -3,6 +3,7 @@
 	font-size: 10px;
 	line-height: 14px;
 	letter-spacing: 1.5px;
+	text-transform: uppercase;
 }
 
 @media screen and (min-width:1024px) and (max-width:1279px) {
