--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,6 +1,7 @@
 .lead__subtitle {
 	margin: 32px auto 0;
-	width: 640px;
+	max-width: 640px;
+	width: 100%;
 	font-size: 30px;
 	line-height: 36px;
 	text-align: center;
@@ -10,7 +11,7 @@
 @media screen and (min-width:320px) and (max-width:767px) {
     .lead__subtitle {
 		margin: 16px auto 0;
-		width: 288px;
+		max-width: 288px;
 		font-size: 16px;
 		line-height: 20px;
     }
