--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,22 +1,23 @@
 .lead__title {
 	margin: 56px auto 0;
-	width: 720px;
+	max-width: 720px;
+	width: 100%;
 	font-weight: 900;
 	font-size: 96px;
 	line-height: 100px;
 	text-align: center;
 }
-@media screen and (min-width:768px) and (max-width:1279px) {
+
+@media screen and (min-width:320px) and (max-width:767px) {
+    .lead__title {
+		max-width: 288px;
+		font-size: 40px;
+		line-height: 44px;
+    }
+}
+
+@media screen and (min-width:320px) and (max-width:1279px) {
 	.lead__title {
 		margin: 48px auto 0;
 	}
 }
-
-@media screen and (min-width:320px) and (max-width:767px) {
-    .lead__title {
-		width: 288px;
-		margin: 48px auto 0;
-		font-size: 40px;
-		line-height: 44px;
-    }
-} 
