--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -5,18 +5,22 @@
 
 @media screen and (min-width:768px) and (max-width:1023px) {
 	.place__image {
-		object-fit: cover;
 		width: 340px;
 		height: 340px;
+	}
+}
+@media screen and (min-width:320px) and (max-width:1023px) {
+	.place__image {
+		object-fit: cover;
 	}
 }
 
 @media screen and (min-width:320px) and (max-width:767px) {
 	.place__image {
-		object-fit: cover;
-		width: 340px;
-		height: 340px;
+		width: 320px;
+		height: 320px;
 		margin-top: 32px;
 		margin-bottom: 32px;
+		margin-left: -16px;
 	}
 }
