--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -4,9 +4,10 @@
 	line-height: 29.34px;
 	font-style: normal;
 	font-weight: 400;
-}
-.place__paragraph:nth-child(1) {
 	margin-bottom: 26px;
+}
+.place__paragraph:last-child {
+	margin-bottom: 0;
 }
 
 @media screen and (min-width:320px) and (max-width:1023px) {
