--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -4,11 +4,12 @@
 	letter-spacing: 2px;
 	color: #AAAAAA;
 	margin: 0;
+	margin-bottom: 12px;
+	text-transform: uppercase;
 }
 
 @media screen and (min-width:320px) and (max-width:767px) {
 	.place__url-heading {
 		margin-top: 32px;
-		margin-bottom: 12px;
 	}
 }
