--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -17,6 +17,6 @@
 
 @media screen and (min-width:320px) and (max-width:767px) {
     .places {
-		width: calc(100% - 2*16px);
+		width: 100%;
     }
 }
