--- a/pages/index.css
+++ b/pages/index.css
@@ -1,12 +1,15 @@
+/*normalize*/
 @import url(../vendor/normalize.css);
+/*шрифты*/
+@import url(../fonts/fonts.css);
 /*page*/
 @import url(../blocks/page/page.css);
 /*header*/
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
+@import url(../blocks/header/__lang_block/header__lang_block.css);
 @import url(../blocks/header/__lang-link/header__lang-link.css);
-/*content*/
-@import url(../blocks/content/content.css);
+@import url(../blocks/header/__lang-link/_active/header__lang-link_active.css);
 /*lead*/
 @import url(../blocks/lead/__caption/lead__caption.css);
 @import url(../blocks/lead/__image/lead__image.css);
@@ -17,6 +20,7 @@
 @import url(../blocks/intro/__title/intro__title.css);
 @import url(../blocks/intro/__text/intro__text.css);
 @import url(../blocks/intro/__list/intro__list.css);
+@import url(../blocks/intro/__solid/intro__solid.css);
 /*photo-grid*/
 @import url(../blocks/photo-grid/photo-grid.css);
 @import url(../blocks/photo-grid/__item/photo-grid__item.css);
@@ -34,12 +38,11 @@
 @import url(../blocks/cover/cover.css);
 @import url(../blocks/cover/__title/cover__title.css);
 @import url(../blocks/cover/__subtitle/cover__subtitle.css);
-@import url(../blocks/cover/__content/cover__content.css);
-@import url(../blocks/cover/__overlay/cover__overlay.css);
-@import url(../blocks/cover/__background/cover__background.css);
+@import url(../blocks/cover/__link/cover__link.css);
 /*footer*/
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 @import url(../blocks/footer/__link/footer__link.css);
+@import url(../blocks/footer/__link/_last/footer__link_last.css);
 @import url(../blocks/footer/__links/footer__links.css);
 
