--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -6,9 +6,8 @@
 	line-height: 76px;
 	text-align: center;
 	color: #FFFFFF;
-	margin: 0 auto;
+	margin: 245px auto 0;
 	z-index: 1;
-	margin-top: 245px;
 }
 
 @media screen and (min-width:1024px) and (max-width:1279px) {
@@ -28,6 +27,6 @@
 		margin-top: 33px;
 		font-size: 32px;
 		line-height: 35px;
-		max-width: 288px;
+		max-width: 250px;
 	}
 }
