--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -3,8 +3,7 @@
 	padding: 0;
 	font-size: 12px;
 	line-height: 18px;
-	margin: 0;
-	margin-top: 33px;
+	margin: 33px 0 0;
 }
 
 @media screen and (min-width:320px) and (max-width:767px) {
