--- a/blocks/place/__header/place__header.css
+++ b/blocks/place/__header/place__header.css
@@ -6,5 +6,7 @@
 @media screen and (min-width:320px) and (max-width:767px) {
 	.place__header {
 		margin-top: 32px;
+		max-width: calc(100% - 2*16px);
+		margin-left: 16px;
 	}
 }
