--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -3,8 +3,7 @@
 	line-height: 20.4px;
 	letter-spacing: 2px;
 	color: #AAAAAA;
-	margin: 0;
-	margin-bottom: 12px;
+	margin: 0 0 12px;
 	text-transform: uppercase;
 }
 
