--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -25,6 +25,7 @@
 		grid-template-columns: 340px 352px;
 		grid-template-rows: auto auto;
 		column-gap: 28px;
+		margin-top: 73px;
     }
 	.place:first-child {
 		margin-top: 88px;
@@ -33,7 +34,7 @@
 
 @media screen and (min-width:320px) and (max-width:767px) {
     .place {
-		grid-template-columns: 288px;
+		grid-template-columns: 100%;
 		grid-template-rows: 0;
 		margin-top: 50px;
 		column-gap: 0;
