--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,10 +1,9 @@
 .place__paragraph {
-	margin: 0;
+	margin: 0 0 26px;
 	font-size: 18px;
 	line-height: 29.34px;
 	font-style: normal;
 	font-weight: 400;
-	margin-bottom: 26px;
 }
 .place__paragraph:last-child {
 	margin-bottom: 0;
@@ -15,6 +14,5 @@
 		font-size: 16px;
 		line-height: 26.08px;
 		max-width: calc(100% - 2*16px);
-		margin-left: 16px;
 	}
 }
