--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -16,3 +16,9 @@
 		max-width: calc(100% - 2*16px);
 	}
 }
+
+@media screen and (min-width:320px) {
+	.place__paragraph {
+		margin-left: 16px;
+	}
+}
