--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -17,7 +17,7 @@
 	}
 }
 
-@media screen and (min-width:320px) {
+@media screen and (min-width:320px) and (max-width:767px) {
 	.place__paragraph {
 		margin-left: 16px;
 	}
